--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,6 +1,7 @@
-<section class="w-full my-16">
+<section  @fadeIn class="w-full my-16">
     
-    <div class="absolute left-0 z-[-1] top-32 opacity-70">
+    <div   
+    class="absolute left-0 z-[-1] top-32 opacity-70">
         <img class=" h-auto w-32 md:w-40 lg:w-72" src="../../../assets/Images/Group 8.svg" alt="svg img">
     </div>
     <div class="m-auto pt-8 md:pt-16 lg:pt-24 max-w-6xl h-full items-center text-center mb-4">
