--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,6 +1,8 @@
-<app-hero></app-hero>
-<app-special-offers></app-special-offers>
-<app-shop-row></app-shop-row>
-<app-over-story></app-over-story>
-<app-gift-sec></app-gift-sec>
-<app-why-us></app-why-us>
+<main>
+    <app-hero></app-hero>
+    <app-special-offers></app-special-offers>
+    <app-shop-row></app-shop-row>
+    <app-over-story></app-over-story>
+    <app-gift-sec></app-gift-sec>
+    <app-why-us></app-why-us>
+</main>
