--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -28,13 +28,13 @@
             md:py-0 md:border-0
             " [class.is-open]="isMenuOpen">
                 <li class="py-4 hover:text-primary600">
-                    <a routerLink="/home" routerLinkActive="page">Home</a>
+                    <a href="/home" >Home</a>
                 </li>
                 <li class="py-4 hover:text-primary600">
-                    <a routerLink="/shop" routerLinkActive="shop">Plants</a>
+                    <a href="/shop">Plants</a>
                 </li>
                 <li class="py-4 hover:text-primary600">
-                    <a routerLink="/about" routerLinkActive="about">Our Story</a>
+                    <a href="/about">Our Story</a>
                 </li>
             </ul>
 
