--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -71,7 +71,8 @@
 
     </div>
 
-    <div class="grid grid-cols-1 gap-2 md:grid-cols-2 lg:grid-cols-3 mx-8 xl:m-auto max-w-6xl">
+    <div class=" myImgs
+    grid grid-cols-1 gap-2 md:grid-cols-2 lg:grid-cols-3 mx-8 xl:m-auto max-w-6xl">
         <img class="object-cover" src="../../../assets/Images/div.gallery-1.jpg" alt="Our Story">
         <img class="object-cover" src="../../../assets/Images/div.gallery-2.jpg" alt="Our Story">
         <img class="object-cover" src="../../../assets/Images/div.gallery-3.jpg" alt="Our Story">
