--- a/src/app/sections/gift-sec/gift-sec.component.html
+++ b/src/app/sections/gift-sec/gift-sec.component.html
@@ -1,7 +1,7 @@
 <!-- Gift section  -->
-<section class="w-full m-0 bg-primary200">
+<section class="w-full m-0 bg-primary200 " id="giftSection">
     <div class="m-auto p-16 md:pt-16 lg:pt-24 max-w-7xl h-full mb-4 grid gap-4 grid-cols-1 md:grid-cols-2 items-center">
-        <div class="max-w-sm">
+        <div class="max-w-sm giftText text-center md:text-left">
             <h3 class="text-2xl max-w-2xl m-auto font-dm-serif tracking-wide md:text-3xl lg:text-4xl">
                 Give the Gift of Plants
             </h3>
@@ -13,7 +13,7 @@
             </p>
             <app-btn-read></app-btn-read>
         </div>
-        <div>
+        <div class="giftImg">
             <img src="../../../assets/Images/div.elementor-wrap.jpg" alt="gifts for your loved onces">
         </div>
 
