--- a/src/app/sections/over-story/over-story.component.html
+++ b/src/app/sections/over-story/over-story.component.html
@@ -1,9 +1,11 @@
-<section class="w-full m-0">
+<!-- Our Story Section -->
+<section id="storySection"
+class="w-full m-0">
     <div class="absolute left-0 z-[-1] opacity-70">
         <img class=" h-auto w-32 md:w-40 lg:w-72" src="../../../assets/Images/Group 8.svg" alt="svg img">
     </div>
     <div class="m-auto pt-8 md:pt-16 lg:pt-24 max-w-6xl h-full items-center text-center mb-4">
-        <div class="max-w-3xl m-auto">
+        <div class="max-w-3xl m-auto headingStory">
             <h4 class="text-sm font-semibold text-primary550 opacity-95 font-dm-serif m-4">
                 Our story
             </h4>
@@ -24,7 +26,7 @@
     </div>
     
     <div class="max-w-6xl m-auto">
-        <app-review></app-review>
+        <app-review class="review"></app-review>
     </div>
     
 
