--- a/src/app/sections/why-us/why-us.component.html
+++ b/src/app/sections/why-us/why-us.component.html
@@ -1,7 +1,9 @@
 <!-- Why us section  -->
-<section class="w-full m-0">
+<section id="whyUsSection"
+class="w-full m-0">
     <div
-        class="m-auto p-16 md:pt-16 lg:pt-24 max-w-7xl text-center justify-items-center
+        class="whyUs
+        m-auto p-16 md:pt-16 lg:pt-24 max-w-7xl text-center justify-items-center
         h-full mb-4 grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 items-center">
 
         <div class="w-44">
