--- a/src/app/component/btn-read/btn-read.component.html
+++ b/src/app/component/btn-read/btn-read.component.html
@@ -1,7 +1,9 @@
 <!--Read-->
-<button class="uppercase text-xs tracking-widest text-primary100 bg-primary600 px-4 py-2  
-md:mt-0 drop-shadow-xl
-hover:bg-primary700 
-">
-    Read More
-</button>
+<a href="/about">
+    <button class="uppercase text-xs tracking-widest text-primary100 bg-primary600 px-4 py-2  
+    md:mt-0 drop-shadow-xl
+    hover:bg-primary700 
+    ">
+        Read More
+    </button>
+</a>
