--- a/src/app/component/review/review.component.html
+++ b/src/app/component/review/review.component.html
@@ -1,4 +1,5 @@
-<div class="text-center m-16 grid grid-cols-1 gap-8">
+<div id="review"
+class="text-center m-16 grid grid-cols-1 gap-8">
     <div class="m-auto">
         <img class="rounded-full w-24 h-24 object-cover" src="../../../assets/Images/Model_2.jpg" alt="review profile">
     </div>
