--- a/src/app/sections/shop-row/shop-row.component.html
+++ b/src/app/sections/shop-row/shop-row.component.html
@@ -1,7 +1,8 @@
 <!-- Shop with us -->
-<section class="w-full m-0">
+<section id="shopSection"
+ class="w-full m-0">
     <div class="m-auto pt-8 max-w-7xl h-full items-center text-center mb-4">
-        <div class="m-4">
+        <div class="m-4 headingShop">
             <h4 class="text-sm font-semibold text-primary550 opacity-95 font-dm-serif m-4">
                 Shop
             </h4>
@@ -10,10 +11,11 @@
             </h2>
         </div>
 
-        <div class="m-4 p-4 ">
+        <div id="productShop" class="m-4 p-4 ">
 
             <app-product-card [plants]="plants"
-             class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8 justify-items-center" ></app-product-card>
+             class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8 justify-items-center" >
+            </app-product-card>
 
         
 
