--- a/src/app/component/logo/logo.component.html
+++ b/src/app/component/logo/logo.component.html
@@ -1,5 +1,5 @@
 <div class="text-xl md:text-xl lg:text-3xl w-24 md:w-28 lg:w-32 m-auto md:m-0">
-    <a href="/home">
+    <a routerLink="/home">
         <div class="logo-img w-full grid grid-cols-2 justify-items-center items-center max-w-[150px]">
             <img src="../../../assets/Images/logo.png" alt="logo image" class="w-10 md:w-12 lg:w-14">
             <h3 class="font-dm-serif ms-2 md:ms-3 text-primary900">
