--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- NavBar -->
-<nav class="z-10
+<nav class="z-30
     drop-shadow-primary100 w-full h-16 md:h-20 xl:h-24 bg-slate-50 fixed top-0 left-0">
     <div class="max-w-xs m-auto h-full
     grid grid-cols-3 gap-2 items-center 
@@ -18,23 +18,23 @@
         <div class="absolute md:relative w-full md:w-auto
         md:col-span-2 md:max-w-md md:justify-self-end">
 
-            <ul class="menu  w-full
-            fixed left-0 mt-8 bg-slate-50 text-center text-lg text-primary700
+            <ul class="menu fixed mt-16
+            w-full left-0  bg-slate-50 text-center text-lg text-primary700
             md:text-inherit divide-y-2 md:divide-y-0
             md:relative md:mt-0 md:h-auto md:bg-transparent md:text-base
             md:w-auto md:grid md:grid-cols-3 md:gap-3
             justify-items-center
             flex-col justify-center py-4 border-2
             md:py-0 md:border-0
-            " [class.is-open]="isMenuOpen">
+            " [class.is-open]="isMenuOpen" (click)="toggleMenu()" >
                 <li class="py-4 hover:text-primary600">
-                    <a href="/home" >Home</a>
+                    <a routerLink="/home" >Home</a>
                 </li>
                 <li class="py-4 hover:text-primary600">
-                    <a href="/shop">Plants</a>
+                    <a routerLink="/shop">Plants</a>
                 </li>
                 <li class="py-4 hover:text-primary600">
-                    <a href="/about">Our Story</a>
+                    <a routerLink="/about">Our Story</a>
                 </li>
             </ul>
 
